--- a/conf/devCommons/config/application.yml
+++ b/conf/devCommons/config/application.yml
@@ -23,7 +23,7 @@ spring:
     # yml填写url连接串， 无需将&符号进行转义
     url: jdbc:mysql://127.0.0.1:3306/jeepaydb?zeroDateTimeBehavior=convertToNull&useUnicode=true&characterEncoding=utf-8&autoReconnect=true&useSSL=false&allowPublicKeyRetrieval=true
     username: root
-    password: 123
+    password: 123456
     druid:
       # 连接池配置项
       initial-size: 5 #初始化时建立物理连接的个数
@@ -90,7 +90,8 @@ logging:
   level:
     root: info   #主日志级别
     com.jeequan.jeepay: debug   #该项目日志级别，当需要打印sql时请开启为debug
-  path: ./logs  #日志存放地址
+  file:
+    path: ./logs
 
 # knife4j APIDOC文档
 knife4j:
